--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ fasteners==0.15
 Flask==1.1.2
 flask-marshmallow==0.12.0
 Flask-SQLAlchemy==2.4.2
+Flask-WTF==0.14.3
 greenlet==0.4.15
 idna==2.9
 iso8601==0.1.12
@@ -46,3 +47,4 @@ urllib3==1.25.9
 Werkzeug==1.0.1
 WMI==1.5.1
 wrapt==1.12.1
+WTForms==2.3.1
