--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ dnspython==1.16.0
 eventlet==0.25.2
 fasteners==0.15
 Flask==1.1.2
+Flask-Babel==1.0.0
 flask-marshmallow==0.12.0
 Flask-SQLAlchemy==2.4.2
+Flask-Table==0.5.0
 Flask-WTF==0.14.3
 greenlet==0.4.15
 idna==2.9
